--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,10 @@ main>div{
   margin-bottom: 40px;
 }
 
+main:hover{
+  box-shadow: 0 10px 100px 0 rgba(34, 36, 38, 0.3);
+  transition: .2s;
+}
 
 /* head */
 
@@ -39,7 +43,7 @@ main>div{
 /* avatar */
 
 .avatar{
-  width: 190px;
+  max-width: 190px;
 }
 .avatar img{
   width: 100%;
@@ -160,4 +164,39 @@ footer{
 
 footer>a{
   text-decoration: black underline;
+}
+
+/* media Media */
+/* 960px main*/
+@media screen and (max-width: 960px){
+  main{
+    margin: 0;
+    width: 100%;
+    box-sizing: border-box;
+  }
+}
+
+/* 600px main-info */
+
+@media screen and (max-width: 600px){
+  .main-info{
+    flex-direction: column;
+  }
+  .left-side, .right-side{
+    width: 100%;
+  }
+}
+
+/* 400px avatar */
+@media (max-width: 400px){
+  .head{
+    flex-direction: column;
+    align-items: center;
+  }
+  .avatar{
+    width: 100%;
+  }
+  .highlight-info{
+    width: 100%;
+  }
 }
